// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Card should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    My Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Product Card should show component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    My Product Card
  </h1>
</div>
`;
